--- a/deno.json
+++ b/deno.json
@@ -1,10 +1,12 @@
 {
   "imports": {
-    "hono": "jsr:@hono/hono@^4.11.4"
+    "hono": "jsr:@hono/hono@^4.11.4",
+    "hono/jsx": "jsr:@hono/hono@^4.11.4/jsx"
   },
   "tasks": {
     "start": "deno run --allow-net main.ts",
-    "dev":"deno run --allow-net main.ts"
+    "dev2":"deno run --allow-net main.ts",
+    "dev":"deno run --allow-ffi --allow-net --allow-read --unstable-kv --allow-env --allow-sys --watch main.ts"
   },
   "compilerOptions": {
     "jsx": "precompile",
