--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,8 @@
 {
   "imports": {
     "hono": "jsr:@hono/hono@^4.11.4",
-    "hono/jsx": "jsr:@hono/hono@^4.11.4/jsx"
+    "hono/jsx": "jsr:@hono/hono@^4.11.4/jsx",
+    "argon2": "npm:argon2"
   },
   "tasks": {
     "start": "deno run --allow-net main.tsx",
